Add support for skipping par/Java gen in case of no Pure changes

--- a/legend-pure-core/legend-pure-m3-bootstrap-generator/pom.xml
+++ b/legend-pure-core/legend-pure-m3-bootstrap-generator/pom.xml
@@ -41,7 +41,6 @@
             <groupId>org.eclipse.collections</groupId>
             <artifactId>eclipse-collections-api</artifactId>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -51,6 +50,10 @@
             <groupId>org.eclipse.collections</groupId>
             <artifactId>eclipse-collections-testutils</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
     </dependencies>
 </project>
