--- a/legend-pure-core/legend-pure-m3-core/pom.xml
+++ b/legend-pure-core/legend-pure-m3-core/pom.xml
@@ -347,6 +347,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
