--- a/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/pom.xml
+++ b/legend-pure-runtime/legend-pure-runtime-java-engine-compiled/pom.xml
@@ -179,6 +179,12 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
