--- a/legend-pure-core/legend-pure-m3-bootstrap-generator/pom.xml
+++ b/legend-pure-core/legend-pure-m3-bootstrap-generator/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure-core</artifactId>
-        <version>5.69.1</version>
+        <version>5.69.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
