--- a/legend-pure-runtime/legend-pure-runtime-java-engine-shared/pom.xml
+++ b/legend-pure-runtime/legend-pure-runtime-java-engine-shared/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure-runtime</artifactId>
-        <version>5.72.1</version>
+        <version>5.72.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
