--- a/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure/pom.xml
+++ b/legend-pure-store/legend-pure-store-relational/legend-pure-m2-store-relational-pure/pom.xml
@@ -87,29 +87,19 @@
                 </dependencies>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
+                <groupId>org.finos.legend.pure</groupId>
+                <artifactId>legend-pure-maven-generation-platform-java</artifactId>
                 <executions>
                     <execution>
-                        <id>generate-path-grammar</id>
-                        <phase>compile</phase>
                         <goals>
-                            <goal>java</goal>
+                            <goal>generate-m3-core-instances</goal>
                         </goals>
                         <configuration>
-                            <mainClass>org.finos.legend.pure.m3.generator.bootstrap.M3CoreInstanceGenerator</mainClass>
-                            <additionalClasspathElements>
-                                <additionalClasspathElement>${project.basedir}/src/main/resources
-                                </additionalClasspathElement>
-                            </additionalClasspathElements>
-                            <arguments>
-                                <argument>${project.build.directory}/generated-sources/</argument>
-                                <argument>RelationalStore</argument>
-                                <argument>
-                                    /platform_store_relational/grammar/relational.pure,
-                                    /platform_store_relational/grammar/relationalMapping.pure
-                                </argument>
-                            </arguments>
+                            <factoryNamePrefix>RelationalStore</factoryNamePrefix>
+                            <fileNameSet>
+                                <fileName>/platform_store_relational/grammar/relational.pure</fileName>
+                                <fileName>/platform_store_relational/grammar/relationalMapping.pure</fileName>
+                            </fileNameSet>
                         </configuration>
                     </execution>
                 </executions>
