--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,11 @@
                 </plugin>
                 <plugin>
                     <groupId>org.finos.legend.pure</groupId>
+                    <artifactId>legend-pure-maven-generation-platform-java</artifactId>
+                    <version>${project.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.finos.legend.pure</groupId>
                     <artifactId>legend-pure-maven-generation-par</artifactId>
                     <version>${project.version}</version>
                 </plugin>
