--- a/legend-pure-maven/legend-pure-maven-compiler/pom.xml
+++ b/legend-pure-maven/legend-pure-maven-compiler/pom.xml
@@ -57,6 +57,10 @@
             <groupId>org.finos.legend.pure</groupId>
             <artifactId>legend-pure-m3-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.finos.legend.pure</groupId>
+            <artifactId>legend-pure-maven-shared</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -71,14 +75,12 @@
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.resolver</groupId>
             <artifactId>maven-resolver-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.resolver</groupId>
-            <artifactId>maven-resolver-util</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
