--- a/legend-pure-maven/pom.xml
+++ b/legend-pure-maven/pom.xml
@@ -49,5 +49,6 @@
         <module>legend-pure-maven-generation-pct</module>
         <module>legend-pure-maven-generation-platform-java</module>
         <module>legend-pure-maven-compiler</module>
+        <module>legend-pure-maven-shared</module>
     </modules>
 </project>
