Revert "[maven-release-plugin] prepare release legend-pure-5.75.0"
This reverts commit 6b92148ba1f701bef74618d3999e252600bf764d.

--- a/legend-pure-maven/legend-pure-maven-generation-platform-java/pom.xml
+++ b/legend-pure-maven/legend-pure-maven-generation-platform-java/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure-maven</artifactId>
-        <version>5.75.0</version>
+        <version>5.74.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>legend-pure-maven-generation-platform-java</artifactId>
