--- a/legend-pure-maven/legend-pure-maven-compiler/pom.xml
+++ b/legend-pure-maven/legend-pure-maven-compiler/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure-maven</artifactId>
-        <version>5.75.0</version>
+        <version>5.75.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>legend-pure-maven-compiler</artifactId>
