--- a/legend-pure-maven/legend-pure-maven-shared/pom.xml
+++ b/legend-pure-maven/legend-pure-maven-shared/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.finos.legend.pure</groupId>
         <artifactId>legend-pure-maven</artifactId>
-        <version>5.76.1-SNAPSHOT</version>
+        <version>5.76.1</version>
     </parent>
 
     <artifactId>legend-pure-maven-shared</artifactId>
